<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:background="#757575"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300px"
            android:layout_height="300px"
            android:layout_weight="1"
            android:outlineAmbientShadowColor="@color/black"
            app:srcCompat="@drawable/cortinapp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#757575"
            android:backgroundTint="#757575"
            android:gravity="center"
            android:textColor="@color/brown_400"
            android:text="@string/text_registroven"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="25sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#757575"
                android:backgroundTint="#BCAAA4"
                android:text="@string/text_identificacion"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtcodarticulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#BCAAA4"
                android:backgroundTint="#BCAAA4"
                android:text="@string/text_nombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#BCAAA4"
                android:backgroundTint="#BCAAA4"
                android:text="@string/text_apellidos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtvalormc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#BCAAA4"
                android:backgroundTint="#BCAAA4"
                android:text="@string/text_correo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#BCAAA4"
                android:backgroundTint="#BCAAA4"
                android:text="@string/text_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#BCAAA4"
                android:backgroundTint="#BCAAA4"
                android:text="@string/text_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btn_cuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BotonSiguiente"
                android:textSize="24sp"/>




        </LinearLayout>


    </ScrollView>






    </LinearLayout>
</LinearLayout>